image overlap resolved

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ html, body {
     display: none;
 }
 .elem{
+    z-index: 10;
     display: inline-block;
     position: relative;
     height: 100%;
@@ -168,7 +169,7 @@ html, body {
     background-color: rgb(255, 255, 255);
     position: relative;
     padding: 70px;
-    padding-top: 100px;
+    padding-top: 500px;
 }
 #page2 h1{
     text-align: center;
